<resources>
    <!-- Lorem Text -->
    <string name="app_name">DoctorPatient Consultation</string>

    <string name="introduction_title">Doctor Patient Consultation</string>
    <string name="registerDoctorTxtView">Register a Doctor</string>
    <string name="registerPatientTxtView">Register a Patient</string>

    <!-- Role Login Text String -->
    <string name="adminLogin">Admin Login</string>
    <string name="doctorLogin">Doctor Login</string>
    <string name="patientLogin">Patient Login</string>
    <string name="roleLogout">%1$s Logout Successfully</string>

    <!-- Admin Username Text String-->
    <string name="adminUsername">Enter Admin Username : </string>
    <string name="adminPassword">Enter Admin Password : </string>
    <string name="cancelLogin">Cancel Login</string>
    <string name="loginNow">Login Now</string>
    <string name="patientSearchViewHint">Enter The Doctor Name</string>

    <!-- Admin Role Text String-->
    <string name="doctor_signUp">Doctor SignUp</string>
    <string name="patient_signUp">Patient SignUp</string>
    <string name="enter_name">Enter Your Name : </string>
    <string name="enter_password">Enter Your Password : </string>
    <string name="enter_phone">Enter Your 10 digit Phone Number : </string>
    <string name="doctor_code_btn">Enter Code and Continue</string>
    <string name="code_et_hint">Enter 6 Digit Otp Code and  Continue</string>

    <!-- Doctor - Patient Login Text String -->
    <string name="doctor_login">Doctor Login</string>
    <string name="patient_login">Patient Login</string>
    <string name="empty_field_error">All Fields are Mandatory !!!</string>

    <!-- Shared Preferences Text String -->
    <string name="PatientCredential">PatientCredential</string>
    <string name="DoctorCredential">DoctorCredential</string>
    <string name="AdminCredential">AdminCredential</string>

    <!-- Available Doctors List Item Text String -->
    <string name="availableDoctorImageContentDescription">Doctor Profile Image View</string>
    <string name="availableDoctorVideoCallBtnContentDescription">Doctor Profile Image View</string>
    <string name="availableDoctorUsername">Doctor Username</string>
    <string name="availableDoctorPhone">Doctor Phone</string>
    <string name="availableDoctorUserDegreeInfo">Doctor Degree</string>

    <!-- Doctor Section Text String -->
    <string name="doctorUsernameTextTitle">Username Value :</string>
    <string name="doctorUsernameTextValue">Username Value :</string>
    <string name="save_profile">Save Profile</string>
    <string name="to_time">To Time</string>
    <string name="to_date">To Date</string>
    <string name="to">To :</string>
    <string name="from">From :</string>
    <string name="choose_working_date_and_time">Choose Working Date And Time :</string>
    <string name="from_date">From Date</string>
    <string name="from_time">From Time</string>
    <string name="your_phone">Your Phone :</string>
    <string name="phone_value">Phone Value:</string>
    <string name="choose_the_time_of_appointment">Choose The Time Value From Below Available Timings :</string>
    <string name="choose_the_date_of_appointment">Choose The Date Value From Above Available Dates :</string>
    <string name="book_appointment">Book An Appointment</string>
    <string name="select_date_of_appointment">Select Date Of Appointment</string>
    <string name="appointment_history_date">Appointment History Date</string>
    <string name="appointment_history_time">Appointment History Time : </string>
    <string name="add_new_timing">Add New Time</string>
    <string name="select_time">Select Time</string>
    <string name="delete_this_item">Delete This Item</string>
    <string name="select_new_date_using_add_new_button">Select New Date Slot Using `Add New Button +` :</string>
    <string name="please_select_the_above_timePicker_or_delete_it">Please Select The Above TimePicker or Delete It</string>
    <string name="night_light_mode">Night-Light Mode</string>

    <string name="are_you_a_doctor">Are You A Doctor, Go To Doctor Login ?</string>
    <string name="are_you_a_admin">Are you a Admin ?</string>
    <string name="no_updated_timings_available_for_the_appointment_by_the_doctor">No Slots Available For Booking</string>
    <string name="doctor_degree_details">Doctor Degree Details :</string>
    <string name="select_doctor_degree_from_available">Select Doctor Degree</string>
    <string name="enter_the_year_of_expiration">Enter the Year of Expiration :</string>
    <string name="select_date_of_doctor_degree_expiry">Date of Graduation :</string>
    <string name="from_timepicker">From TimePicker</string>
    <string name="to_timepicker">To TimePicker</string>
    <string name="slot_duration">Slot Duration:</string>
    <string name="add_new_slot">Add New Slot</string>
    <string name="get_all_appointments">Get All Appointments</string>
    <string name="no_past_appointments_yet">No Past Appointments Are Available</string>
    <string name="no_upcoming_appointments_yet">No Upcoming Appointments Are Available</string>

    <!-- Patient/Doctor Menu String -->
    <string name="logout">Logout</string>
    <string name="view_profile">View/Edit Profile</string>
    <string name="check_appointment_details">Check Appointment Details</string>
    <string name="doctor_search">Search</string>

    <!-- PlaceHolder Text String -->
    <string name="doctor_name">Dr. %1$s</string>
    <string name="date_time_of_appointment">%1$s - %2$s</string>
    <string name="update_degree_details">Update Degree Details :</string>
    <string name="select_type_of_degree">Select Type Of Degree:</string>
    <string name="add_new_degree">Add New Degree</string>
    <string name="update_timings">Update Timings</string>
    <string name="doctor_username">Doctor Name :</string>
    <string name="available_doctors">Available Doctors</string>
    <string name="appointments">Appointments</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="no_doctors_available_for_the_provided_filter">No Doctors Available For The Provided Query Filter</string>
    <string name="no_doctors_available_currently">"No Doctor Are Available At This Moment"</string>

    <string name="signup_data_saved">%1$s Data Saved Successfully</string>
    <string name="degree_details_saved">Doctor Degree Details Updated Successfully</string>
    <string name="doctor_already_exists">Doctor Already Exists With This Phone Number - %1$s</string>
    <string name="patient_already_exists">User Already Exists With This Phone Number - %1$s</string>

    <string name="invalid_login_found">Invalid Login Found !!!</string>
    <string name="phone_required">Phone Number Required</string>
    <string name="password_required">Password Required</string>
    <string name="username_required">Username Required</string>
    <string name="timing_selection_required">Time Must Be Selected</string>
    <string name="date_time_required">All Date Time Fields are Required.</string>
    <string name="degree_required">No Degree Details Selected</string>
    <string name="date_time_selection_error">Some Error in Your Date Time Values</string>
    <string name="unavailable_time">Unable To Book the Appointment Due to Unavailability</string>

    <string name="date_time_slot_updated">Doctor Timings Slot Updated Successfully</string>
    <string name="graduation_date">Date of Graduation</string>

    <string name="not_found">Not Able To Find For the Related Query</string>
    <string name="error_302">Not the Intended Action To Perform</string>
    <string name="error_500">Some DataBase Error Occurred In the App</string>
    <string name="app_error">Some Error Occurred In the App</string>

    <string name="no_slots_available">No Slots Are There For The Selected Date - %1$s</string>

    <string name="appointment_booked_status">Appointment is Booked With Id : %1$d</string>
    <string name="Ok">OK</string>
    <string name="error">Oops…</string>
    <string name="success">Success</string>

</resources>