<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/parentLayoutPadding"
    android:weightSum="8">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4">

        <AutoCompleteTextView
            android:id="@+id/DoctorDegreeDrpDown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/select_type_of_degree"
            android:inputType="none"
            android:text="@string/select_doctor_degree_from_available"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/DoctorDegreeExpDateBtn"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="3"
        android:text="@string/select_date_of_doctor_degree_expiry" />

    <ImageButton
        android:id="@+id/DeleteDegreeBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:contentDescription="@string/delete_this_item"
        android:src="@drawable/ic_baseline_close_24" />

</LinearLayout>