<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/OpenDatePickerItemBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/select_date_of_appointment"
            android:textAllCaps="false" />

        <ImageButton
            android:id="@+id/DeleteTimeItemImgBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:contentDescription="@string/delete_this_item"
            android:src="@drawable/ic_baseline_close_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addTimeSlotsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addNewTimeSlotBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/add_new_slot"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/ValidationErrorItemTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_select_the_above_timePicker_or_delete_it"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        android:visibility="gone" />

</LinearLayout>