<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/SnackBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".DoctorProfileActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/DoctorProfileImgViewForPatient"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_border_color="#111113"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/doctorUsernameTextTitle"
                android:textColor="@color/purple_700"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/DoctorProfileUsernameForPatient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/doctorUsernameTextValue" />

        </LinearLayout>

        <Button
            android:id="@+id/DateOfAppointmentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/purple_700"
            android:text="@string/select_date_of_appointment"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/choose_the_time_of_appointment"
            android:textColor="@color/purple_700"
            android:textSize="13sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/DoctorAvailableTimingsRecyclerViewForPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/BookAppointmentBtnForPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/purple_700"
            android:text="@string/book_appointment"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>