<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fromTimePckBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/from_timepicker"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/toTimePckBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/to_timepicker"
        android:textAllCaps="false" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@null"
        app:boxStrokeColor="@color/black">

        <EditText
            android:id="@+id/timeDurationEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/slot_duration"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
